--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "gitbook-plugin-klipse",
-  "version": "1.2.0",
-  "description": "A klipse plugin for gitbook",
+  "name": "gitbook-plugin-eason-parser",
+  "version": "0.0.1",
+  "description": "An eason parser plugin for gitbook",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/brian-dawn/gitbook-plugin-klipse.git"
+    "url": "git+https://github.com/jeff-tian/gitbook-plugin-eason-parser.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/brian-dawn/gitbook-plugin-klipse/issues"
+    "url": "https://github.com/jeff-tian/gitbook-plugin-eason-parser/issues"
   },
-  "homepage": "https://github.com/brian-dawn/gitbook-plugin-klipse#readme",
+  "homepage": "https://github.com/jeff-tian/gitbook-plugin-eason-parser#readme",
   "engines": {
     "gitbook": ">1.x.x"
   },
